network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: 
  name: accesspolicy
spec: 
  podSelector: 
    matchLabels: 
      app: websvr
  ingress: 
  - from: 
    - podSelector: 
        matchLabels: 
          access: "true"
    - ipBlock: 
        cidr: 192.168.2.0/24
    ports: 
    - protocol: TCP
      port: 80
